# microloop

./: .gitignore  BEAT_LED_TIMEKEEPER_INTEGRATION.md  CHOKE_DESIGN.md  CLAUDE.md  CMakeLists.txt  DEBOUNCE_SOLUTION.md  DISPLAY_BITMAPS.md  EFFECT_SYSTEM_MIGRATION.md  ENCODER_ARCHITECTURE.md  ENCODER_MENU_SYSTEM.md  ENCODER_TEST_GUIDE.md  FREEZE_EFFECT_DESIGN.md  LICENSE  ONSET_QUANTIZATION_FIX.md  README.md  TIMEKEEPER_IMPLEMENTATION.md  microloop.kicad_pro  microloop.kicad_sch  update.ino
PerformanceTool/: PerformanceTool.ino  SGTL5000.cpp  SGTL5000.h  app_logic.cpp  app_logic.h  midi_io.cpp  midi_io.h
cmake/: teensy41.cmake
docs/: README.md
docs/diagrams/: StutterStateMachine.mmd  stutter_state_machine.mmd
hardware/: BOM.csv  microloop.kicad_sch  microloop_bom.csv
hardware/schematics/: microloop.kicad_pro  microloop.kicad_sch  microloop_symbols.kicad_sym  sym-lib-table
include/: SGTL5000.h  app_logic.h  app_state.h  audio_choke.h  audio_effect_base.h  audio_freeze.h  audio_stutter.h  audio_timekeeper.h  bitmaps.h  choke_controller.h  choke_handler.h  choke_io.h  display_io.h  display_manager.h  effect_controller.h  effect_manager.h  effect_quantization.h  encoder_handler.h  encoder_io.h  encoder_menu.h  encoder_test.h  freeze_controller.h  freeze_handler.h  input_io.h  mcp_io.h  midi_io.h  neokey_io.h  oled_io.h  stutter_controller.h
libs/: README.md
schematic/: microloop.kicad_prl  microloop.kicad_pro  microloop.kicad_sch  teensy4.0_audioshield_revd.lib
src/: SGTL5000.cpp  SGTL5000_CUSTOM_BACKUP.cpp  app_logic.cpp  choke_controller.cpp  choke_handler.cpp  choke_io.cpp  display_io.cpp  display_manager.cpp  effect_manager.cpp  effect_quantization.cpp  encoder_handler.cpp  encoder_io.cpp  encoder_menu.cpp  encoder_test.cpp  freeze_controller.cpp  freeze_handler.cpp  input_io.cpp  main.cpp  mcp_io.cpp  midi_io.cpp  neokey_io.cpp  oled_io.cpp  stutter_controller.cpp
src/app/: App.cpp  App.h  AppLogic.cpp  AppLogic.h  AppState.h  ChokeController.cpp  ChokeController.h  DisplayManager.cpp  DisplayManager.h  EffectController.h  EncoderHandler.cpp  FreezeController.cpp  FreezeController.h  GlobalController.cpp  GlobalController.h  IEffectController.h  PresetController.cpp  PresetController.h  StutterController.cpp  StutterController.h  app_logic.cpp  choke_controller.cpp  choke_controller.h  display_manager.cpp  display_manager.h  freeze_controller.cpp  freeze_controller.h  stutter_controller.cpp  stutter_controller.h
src/core/: Command.h  SpscQueue.h  TimeKeeper.cpp  Timebase.cpp  Timebase.h  Trace.cpp
src/dsp/: AudioChoke.cpp  AudioChoke.h  AudioFreeze.cpp  AudioFreeze.h  AudioStutter.cpp  AudioStutter.h  AudioTimeKeeper.h  ChokeAudio.cpp  ChokeAudio.h  EffectManager.cpp  EffectManager.h  EffectQuantization.cpp  EffectQuantization.h  FreezeAudio.cpp  FreezeAudio.h  IEffectAudio.h  StutterAudio.cpp  StutterAudio.h  TimebaseAudio.h  audio_choke.cpp  audio_choke.h  audio_freeze.cpp  audio_freeze.h  audio_stutter.cpp  audio_stutter.h  effect_quantization.cpp  effect_quantization.h
src/hal/: Mcp23017Input.cpp  Mcp23017Input.h  McpIO.cpp  McpIO.h  MidiIO.cpp  MidiInput.cpp  MidiInput.h  NeokeyIO.cpp  NeokeyIO.h  NeokeyInput.cpp  NeokeyInput.h  OledIO.cpp  OledIO.h  SdCardStorage.cpp  SdCardStorage.h  Ssd1306Display.cpp  Ssd1306Display.h  mcp_io.cpp  neokey_io.cpp  neokey_io.h  oled_io.cpp
tests/: TESTING.md  run_tests.cpp  test_encoders_main.cpp  test_runner.h  test_spsc_queue.cpp  test_timekeeper.cpp  test_trace.cpp
utils/: TIMEKEEPER_USAGE.md  TRACE_USAGE.md  command.h  span.h  spsc_queue.h  timekeeper.cpp  timekeeper.h  trace.cpp  trace.h
